kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fittrack
  labels:
    app.kubernetes.io/name: fittrack
    app.kubernetes.io/part-of: fitness-web-microservices
