kubernetes/04-eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  namespace: fittrack
  labels:
    app: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: 2201920100047/eureka:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
          resources:
            limits:
              memory: 384Mi
              cpu: 500m
          readinessProbe:
            httpGet:
              path: /
              port: 8761
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8761
            initialDelaySeconds: 90
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: fittrack
spec:
  selector:
    app: eureka
  ports:
    - port: 8761
      targetPort: 8761
