kubernetes/06-userservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  namespace: fittrack
  labels:
    app: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: 2201920100047/userservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 90
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 120
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
  namespace: fittrack
spec:
  selector:
    app: userservice
  ports:
    - port: 8081
      targetPort: 8081
