kubernetes/07-activity-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity-service
  namespace: fittrack
  labels:
    app: activity-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activity-service
  template:
    metadata:
      labels:
        app: activity-service
    spec:
      containers:
        - name: activity-service
          image: 2201920100047/activity-status:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 90
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 120
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: activity-service
  namespace: fittrack
spec:
  selector:
    app: activity-service
  ports:
    - port: 8082
      targetPort: 8082
