kubernetes/08-ai-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service
  namespace: fittrack
  labels:
    app: ai-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-service
  template:
    metadata:
      labels:
        app: ai-service
    spec:
      containers:
        - name: ai-service
          image: 2201920100047/aiservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 90
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 120
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: fittrack
spec:
  selector:
    app: ai-service
  ports:
    - port: 8083
      targetPort: 8083
